# smart-budget-meal-optimizer-v3

./: .gitignore  Dockerfile  README.md  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: __init__.py  app.py  environment.py
server/static/: index.html
